# python-split-pdf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  run.py
.claude/: settings.local.json
.claude/commands/: build.md  new-issue.md  push-pr.md  release.md  review-invoice.md
.claude/skills/: github.md
packaging/: PDFSplitter.spec  README.md  clean.ps1  package.ps1  package.sh  requirements.txt
src/: __init__.py  __version__.py  pdf_splitter.py
tests/: __init__.py  test_pdf_splitter.py
